--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,6 +9,10 @@
     gap: 48px 40px;
 }
 
+.place:last-child {
+    margin: 0;
+}
+
 @media screen and (max-width: 1024px) {
     .place {
         max-width: calc(1024px - 48px*2);
@@ -23,19 +27,6 @@
 }
 
 @media screen and (max-width: 550px) {
-    .place {
-        margin: 0 0 50px;
-        grid-template-columns: min-content;
-        grid-template-areas:
-        "title"
-        "website"
-        "image"
-        "text";
-        gap: 32px;
-    }
-} 
-
-@media screen and (max-width: 320px) {
     .place {
         margin: 0 0 50px;
         grid-template-columns: min-content;
