--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 740px;
+    min-height:740px;
     row-gap: 32px;
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
@@ -12,6 +12,8 @@
     box-sizing: border-box;
     text-decoration: none;
     color: #FFFFFF;
+    position: relative;
+    z-index: 1;
 }
 
 @media screen and (max-width: 1024px) {
@@ -31,10 +33,18 @@
     }
 }
 
-
-.cover__overlay:hover {
-    content: "cover__overlay";
-    opacity: 0.8;
-    background-color: #2A2C2F;
+.cover__overlay::before {
+    content: "";
+    background: #2A2C2F;
+    opacity: 0.3;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: -1;
+}
+
+.cover__overlay:hover::before {
+    opacity: 0.8;
 }
