--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,18 +7,22 @@
     margin: 0;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 650px) {
+    .cover__title {
+        font-size: 3rem;
+        line-height: 1.09;
+    }
+}
+
+@media screen and (max-width: 500px) {
     .cover__title {
         max-width: 288px;
-        font-size: 2.2rem;
-        line-height: 1.09;
+        font-size: 2.5rem;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover__title {
-        max-width: 288px;
         font-size: 32px;
-        line-height: 1.09;
     }
 }
