--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,9 +7,7 @@
 
 @media screen and (max-width: 320px) {
     .footer__copyright {
-        font-weight: 400;
-        font-size: 14px;
         line-height: 1;
-        margin: 0 auto 0 0;
+        margin: 16px auto 0 0;
     }
     }
