--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -30,8 +30,6 @@
 
 @media screen and (max-width: 320px) {
     .footer {
-        max-width: calc(320px - 16px*2);
-        flex-direction: column;
-        row-gap: 32px;
+        margin: 64px auto 0;
     }
 }
