--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,4 +1,7 @@
 .header__links {
+    display: flex;
+    flex-direction: row;
+    gap: 18px;
     font-weight: 400;
     font-size: 24px;
     line-height: 1.17;
