--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,8 +7,7 @@
 
 @media screen and (max-width: 1024px) {
     .lead__image {
-        max-width: 984px;
-        max-height: 615px;
+        max-width: 96vw;
     }
 }
 @media screen and (max-width: 768px) {
