--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,10 +6,13 @@
     line-height: 1.63;
 }
 
+.place__paragraph:last-child {
+    margin-bottom: 0;
+}
+
 @media screen and (max-width: 1024px) {
     .place__paragraph {
         margin: 0 0 27px;
-        font-size: 16px;
     }
 }
 @media screen and (max-width: 768px) {
@@ -21,7 +24,5 @@
 @media screen and (max-width: 320px) {
     .place__paragraph {
         padding: 0 16px;
-        margin: 0 0 25px;
-        font-size: 16px;
     }
 }
