--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,23 +10,19 @@
 @media screen and (max-width: 1024px) {
     .place__title {
         max-width: 440px;
-        font-weight: 900;
-        font-size: 72px;
-        line-height: 1.06;
     }
 }
 @media screen and (max-width: 768px) {
     .place__title {      
         max-width: 340px;
-        font-weight: 900;
         font-size: 42px;
         line-height: 1.1;
     }
 }
 @media screen and (max-width: 320px) {
     .place__title {
-        padding: 0 16px;
-        font-weight: 900;
+        max-width: 288px;
+        margin-left: 16px;
         font-size: 32px;
         line-height: 1.09;
     }
