--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,11 +5,6 @@
     max-height: 46px;
 }
 
-@media screen and (max-width: 1024px) {
-    .place__website {
-        max-width: 456px;
-    }
-}
 @media screen and (max-width: 768px) {
     .place__website {
         max-width: 352px;
@@ -19,13 +14,12 @@
 @media screen and (max-width: 340px) {
     .place__website {
         max-width: 100vw;
-        padding: 0 16px;
+        margin-left: 16px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__website {
         max-width: 288px;
-        padding: 0 16px;
     }
 }
