--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,21 +1,5 @@
-@font-face {    
-    src: url(../../fonts/Inter/static/Inter-Regular.ttf);
-    font-family: 'Inter';
-}
-
-@font-face {
-    src: url(../../fonts/Inter/static/Inter-Bold.ttf);
-    font-family: 'Inter';
-    font-weight: 700;
-}
-
-@font-face {
-    src: url(../../fonts/Inter/static/Inter-Black.ttf);
-    font-family: 'Inter';
-    font-weight: 900;
-}
 .root {
-    max-width: 100vw;
+    max-width: 1280px;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     background-color: #2A2C2F;
