--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
 
+@import url(../vendor/fonts.css);
+
 @import url(../blocks/root/root.css);
 
 @import url(../blocks/header/header.css);
@@ -7,6 +9,8 @@
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/header/__links/header__links.css);
+
+@import url(../blocks/header/__lang-link/header__lang-link_ru.css);
 
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 
@@ -22,8 +26,6 @@
 
 @import url(../blocks/lead/__caption/lead__caption.css);
 
-@import url(../blocks/container/container.css);
-
 @import url(../blocks/intro/intro.css);
 
 @import url(../blocks/intro/__title/intro__title.css);
@@ -31,6 +33,8 @@
 @import url(../blocks/intro/__text/intro__text.css);
 
 @import url(../blocks/intro/__list/intro__list.css);
+
+@import url(../blocks/intro/__span-accent/into__span-accent.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
 
