--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,4 @@
-.place__website_link {
+.place__link {
     color: #FFFFFF;
     font-weight: 400;
     font-size: 18px;
@@ -6,6 +6,6 @@
     margin: 0 auto;
 }
 
-.place__website_link:hover {
+.place__link:hover {
     opacity: 0.8;
 }
