--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,8 +1,8 @@
-.header__lang-link_ru {
+.header__lang-link_active {
     color: #FFFFFF;
     text-decoration: underline;
 }
 
-.header__lang-link_ru:hover {
+.header__lang-link_active:hover {
     opacity: 0.8;
 }
