--- a/blocks/header/__link/_active/header__link_active.css
+++ b/blocks/header/__link/_active/header__link_active.css
@@ -1,8 +1,8 @@
-.header__lang-link_active {
+.header__link_active {
     color: #FFFFFF;
     text-decoration: underline;
 }
 
-.header__lang-link_active:hover {
+.header__link_active:hover {
     opacity: 0.8;
 }
