--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,12 +2,12 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
-    margin: 0 0 0 auto;
+    margin: 0;
 }
 
 @media screen and (max-width: 320px) {
     .footer__copyright {
         line-height: 1;
-        margin: 16px auto 0 0;
+        margin: 0;
     }
-    }
+}
