--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,9 +2,9 @@
     max-width: calc(1280px - 48px*2);
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     margin: 92px auto 0;
     padding-bottom: 24px;
-    column-gap: 18px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -12,7 +12,7 @@
         max-width: calc(1024px - 48px*2);
     }
 }
-    
+
 @media screen and (max-width: 768px) {
     .footer {
         max-width: calc(768px - 24px*2);
@@ -20,11 +20,11 @@
     }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 570px) {
     .footer {
         max-width: calc(320px - 16px*2);
         flex-direction: column;
-        row-gap: 32px;
+        row-gap: 48px;
     }
 }
 
