--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,6 @@
 .photo-grid__item {
     max-width: 284px;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {
@@ -9,10 +10,11 @@
 }
 @media screen and (max-width: 768px) {
     .photo-grid__item {
-        max-width: 352px;
+        max-width: 45.83vw;
     }
 }
-@media screen and (max-width: 400px) {
+
+@media screen and (max-width: 600px) {
     .photo-grid__item {
         max-width: 90vw;
     }
