--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,7 +2,6 @@
     align-self: end;
     grid-area: website;
     max-width: 456px;
-    max-height: 46px;
 }
 
 @media screen and (max-width: 768px) {
@@ -14,12 +13,6 @@
 @media screen and (max-width: 340px) {
     .place__website {
         max-width: 100vw;
-        margin-left: 16px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .place__website {
-        max-width: 288px;
+        margin: 0 16px;
     }
 }
