--- a/pages/index.css
+++ b/pages/index.css
@@ -66,6 +66,12 @@
 
 @import url(../blocks/footer/footer.css);
 
+@import url(../blocks/footer/__links/footer__links.css);
+
 @import url(../blocks/footer/__link/footer__link.css);
 
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+body {
+    background-color: #2A2C2F;
+}
