--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,27 +1,4 @@
 .photo-grid__item {
-    max-width: 284px;
-    margin: 0 auto;
-}
-
-@media screen and (max-width: 1024px) {
-    .photo-grid__item {
-        max-width: 300px;
-    }
-}
-@media screen and (max-width: 768px) {
-    .photo-grid__item {
-        max-width: 45.83vw;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .photo-grid__item {
-        max-width: 90vw;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .photo-grid__item {
-        max-width: 288px;
-    }
+    object-fit: cover;
+    width: 100%;
 }
