--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,11 @@
 .photo-grid {
-    max-width: 100%;
+    max-width: 1184px;
+    width: 100%;
     align-self: stretch;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
     gap: 16px;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {
