--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,8 @@
 
 @import url(../vendor/fonts.css);
 
+@import url(../blocks/body/body.css);
+
 @import url(../blocks/root/root.css);
 
 @import url(../blocks/header/header.css);
@@ -71,7 +73,3 @@
 @import url(../blocks/footer/__link/footer__link.css);
 
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-
-body {
-    background-color: #2A2C2F;
-}
